--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "morgan": "1.10.0",
     "nodemon": "^2.0.19",
     "parcel-bundler": "^1.12.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11"
   },
